--- a/src/assets/css/level.css
+++ b/src/assets/css/level.css
@@ -3,7 +3,6 @@
 .game-container {
     padding: 0;
     width: 100vw;
-    height: 100vh;
     background: black;
     display: flex;
     flex-direction: column;
@@ -35,47 +34,37 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 50px;
+    gap: 6vh;
     color: white;
-}
-
-.top-line {
-    border-bottom: 5px solid white;
-    height: 100px
-}
-
-.bottom-line {
-    border-top: 5px solid white;
-    height: 100px
 }
 
 .round-layer-label {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 10px;
+    gap: 1.5vh;
     font-weight: bold;
 }
 
 .round-layer-label-title {
     font-family: game;
-    font-size: 25px;
+    font-size: 1.3vw;
 }
 
 .round-layer-label-index {
     font-family: game;
-    font-size: 25px;
+    font-size: 1.3vw;
     color: gold;
 }
 
 .round-layer-title {
     font-family: game;
     font-weight: bold;
-    font-size: 50px
+    font-size: 3vw
 }
 
 .game-main {
-    gap: 20px;
+    gap: 3vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -84,7 +73,7 @@
 }
 
 .game-side {
-    padding-top: 30px;
+    padding-top: 4vh;
     width: 25vw;
     display: flex;
     flex-direction: column;
@@ -93,20 +82,20 @@
 
 .game-side-number {
     font-family: game;
-    font-size: 40px;
+    font-size: 2vw;
     color: gold;
 }
 
 .game-side-label {
     font-family: game;
-    font-size: 20px;
+    font-size: 1.5vw;
     color: white;
 }
 
 .stratagems {
-    gap: 15px;
+    gap: 3vh;
     width: 100%;
-    height: 250px;
+    height: 27vh;
     display: flex;
     flex-direction: column;
     justify-self: center;
@@ -114,7 +103,7 @@
 
 .stratagems-pointer {
     width: 100%;
-    height: 200px;
+    height: 22vh;
     display: flex;
     justify-content: flex-start;
     flex-direction: row;
@@ -127,20 +116,20 @@
     font-family: game;
     background: gold;
     width: 100%;
-    height: 50px;
+    height: 11vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    line-height: 50px;
-    font-size: 30px;
+    line-height: 6.5vh;
+    font-size: 1.7vw;
 }
 
 .arrow-layer {
+    margin-top: 1.1vh;
     width: 100%;
-    height: 150px;
+    height: 13vh;
     gap: 0;
-    margin: 0;
     padding: 0;
 }
 
@@ -158,26 +147,28 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    gap: 50px;
+    gap: 6vh;
 }
 
 .result-item-label {
+    text-shadow: 0 0 0.3rem white;
     font-family: game;
     color: white;
-    font-size: 25px;
+    font-size: 1.6vw;
     font-weight: bold;
 }
 
 .result-score-label {
+    text-shadow: 0 0 0.2rem yellow;
     font-family: game;
     color: gold;
-    font-size: 30px;
+    font-size: 1.6vw;
     font-weight: bold;
 }
 
 .round-result-layer {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 500px;
+    gap: 29vw
 }
 
